@@ -7,4 +7,4 @@ Author: Assaf P. Oron
 Maintainer: Assaf P. Oron <assaf.oron@seattlechildrens.org>
 Description: Produces summary tables for descriptives and for regression results. Exports the tables to .xls or .xlsx multi-tab spreadsheets, using the XLConnect package.
 License: GPL-2
-Depends: XLConnect
+Imports: XLConnect
